# Mini-Ifood

./: README.md
Mini-Ifood-main/mini-ifood/app/: Main.hs
Mini-Ifood-main/mini-ifood/data/: cardapios.txt  cupons.txt  explicacao.txt  restaurantes.txt  taxas.txt
Mini-Ifood-main/mini-ifood/src/: FileIO.hs  Logic.hs  Types.hs  UI.hs
app/: Main.hs
data/: explicacao.txt
mini-ifood/: minifood.cabal
mini-ifood/app/: Main.hs
mini-ifood/data/: cardapios.txt  cupons.txt  restaurantes.txt  taxas.txt
mini-ifood/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
mini-ifood/src/: FileIO.hs  Logic.hs  Types.hs  UI.hs  explicacao.txt
