cabal-version:      2.4
name:               minifood
version:            0.1.0.0
synopsis:           Mini sistema de delivery pelo terminal
author:             Aluno
build-type:         Simple

executable minifood
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:
      Types
    , FileIO
    , Logic
    , UI
  build-depends:
      base       >= 4.14 && < 5
    , containers
    , time
  default-language: Haskell2010
  ghc-options:      -Wall